[project]
name = "hn-hiring-mcp"
version = "0.1.0"
description = "An MCP server that lets agents search Hacker News 'Who is hiring?' job posts."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
hn-hiring-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
